apps/my-cool-kustomize-app/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-cool-kustomize-application
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: "nginx"
  rules:
    - host: myapp.prod.k8s.local
      http:
        paths:
          - backend:
              service:
                name: my-cool-kustomize-application
                port:
                  number: 8000
            pathType: Prefix
            path: /
